# Data-Pipeline

./: .gitignore  COMMIT_MESSAGE.md  pyproject.toml  readme.md
data_pipeline/core/: pipeline.py  registry.py
data_pipeline/pipeline/Loaders/: __init__.py  base_loader.py  csv_loader.py  excel_loader.py
data_pipeline/pipeline/Parsers/: __init__.py  base_parser.py  csv_parser.py  excel_parser.py
data_pipeline/pipeline/Transformers/: __init__.py  actual_excel_game_transformer.py  auto_categorize_transformer.py  base_transformer.py  excel_game_transformer.py
data_pipeline/pipeline/converters/: auto_generating_converter.py  base_converter.py  smart_converter.py  sqlite_converter.py
data_pipeline/pipeline/mappers/: base_mapper.py
data_pipeline/utils/: mappings.py
data_pipeline_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/data/: csvFile.csv
examples/scripts/: actual_excel_pipeline.py  example_app.py  excel_game_pipeline.py  test_excel_components.py  verify_database.py
